# Aton

./: CMakeLists.txt  COPYING.txt  README  README.md  index.html  params.json
RenderConnect.xcodeproj/: project.pbxproj
RenderConnect.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RenderConnect.xcodeproj/project.xcworkspace/xcshareddata/: RenderConnect.xcscmblueprint
RenderConnect.xcodeproj/project.xcworkspace/xcuserdata/Sosoyan.xcuserdatad/: UserInterfaceState.xcuserstate
RenderConnect.xcodeproj/xcuserdata/Sosoyan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
RenderConnect.xcodeproj/xcuserdata/Sosoyan.xcuserdatad/xcschemes/: arnoldConnect.xcscheme  renderConnect.xcscheme  xcschememanagement.plist
cmake/: FindArnold.cmake  FindNuke.cmake
javascripts/: stats.js
scripts/: aton.py  aton_c4d.pyp  aton_houdini.py  aton_maya.py  renderConnect.py
src/: Aton.cpp  Aton.h  Client.cpp  Client.h  Data.cpp  Data.h  Driver_Aton.cpp  FBUpdater.h  FBWriter.h  FrameBuffer.cpp  FrameBuffer.h  Server.cpp  Server.h  aton_client.cpp  aton_client.h  aton_driver.cpp  aton_driver_arnold.cpp  aton_fb_updater.h  aton_fb_writer.h  aton_framebuffer.cpp  aton_framebuffer.h  aton_node.cpp  aton_node.h  aton_server.cpp  aton_server.h  d_arnoldConnect.cpp  nk_renderConnect.cpp
stylesheets/: styles.css
